header color change scroll remove from validate User Page

--- a/src/pages/accident-assist/accident-assist.scss
+++ b/src/pages/accident-assist/accident-assist.scss
@@ -2,10 +2,12 @@ page-accident-assist {
   background-color: rgba(254, 254, 254, 1);
   .cheader ion-toolbar {
     height: 10vh !important;
-    border-bottom-left-radius: 70%;
-    border-bottom-right-radius: 70%;
+    border-bottom-left-radius: 80%;
+    border-bottom-right-radius: 80%;
     .toolbar-background {
-      background-color: rgba(203, 204, 208, 1) ;
+      // background-color: rgba(203, 204, 208, 1) ;
+      background: linear-gradient(180deg, #A2A4A7 0, #FFFFFF 95%);/* W3C */
+
     }
   }
 
