--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -86,7 +86,13 @@ h3 {
   border-bottom-left-radius: 70%;
   border-bottom-right-radius: 70%;
   .toolbar-background {
-    background-color: rgba(203, 204, 208, 1) ;
+    // background: -moz-linear-gradient(270deg, #FFFFFF 0, #A2A4A7 81%);/* FF3.6+ */
+    //   background: -webkit-gradient(linear, 270deg, color-stop(0, FFFFFF), color-stop(81%, A2A4A7));/* Chrome,Safari4+ */
+    //   background: -webkit-linear-gradient(270deg, #FFFFFF 0, #A2A4A7 81%);/* Chrome10+,Safari5.1+ */
+    //   background: -o-linear-gradient(270deg, #FFFFFF 0, #A2A4A7 81%);/* Opera 11.10+ */
+    //   background: -ms-linear-gradient(270deg, #FFFFFF 0, #A2A4A7 81%);/* IE10+ */
+    //   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#1301FE', endColorstr='#F4F60C', GradientType='1'); /* for IE */
+      background: linear-gradient(180deg, #FFFFFF 0, #A2A4A7 81%);/* W3C */
   }
 
 }
