--- a/src/pages/poi-list/poi-list.scss
+++ b/src/pages/poi-list/poi-list.scss
@@ -2,13 +2,15 @@ page-poi-list {
   background-color: rgba(204, 204, 204, 1);
   .cheader ion-toolbar {
     height: 10vh !important;
-    border-bottom-left-radius: 70%;
-    border-bottom-right-radius: 70%;
+    border-bottom-left-radius: 80%;
+    border-bottom-right-radius: 80%;
     .toolbar-background {
-      background-color: rgba(170, 171, 175, 1) ;
+      // background-color: rgba(170, 171, 175, 1) ;
+      background: linear-gradient(180deg, #A2A4A7 0, #FFFFFF 95%);/* W3C */
+      
     }
   }
-  
+
   .mapListButton {
     background-color: white !important;
   }
