--- a/src/pages/validate-user-otp/validate-user-otp.scss
+++ b/src/pages/validate-user-otp/validate-user-otp.scss
@@ -18,4 +18,7 @@ page-validate-user-otp {
     position: relative;
     top: 50%;
   }
+  .scroll-content {
+    overflow: hidden !important;
+  }
 }
