--- a/src/pages/update-your-details/update-your-details.scss
+++ b/src/pages/update-your-details/update-your-details.scss
@@ -16,4 +16,13 @@ page-update-your-details {
     top: 40% !important;
   }
 
+  .buttonYesNO {
+    background-color: #fab700;
+    width: 43%;
+    margin: 3%;
+    border-radius: 64px;
+    color: #fff;
+
+  }
+
 }
