--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,7 +1,7 @@
 // Ionic Variables and Theming. For more info, please see:
 // http://ionicframework.com/docs/v2/theming/
 $font-path: "../assets/fonts";
-
+$font-stack:   Arial; //Helvetica, sans-serif
 @import "ionic.globals";
 
 
@@ -24,33 +24,43 @@ $font-path: "../assets/fonts";
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #387ef5,
-  secondary:  #32db64,
-  danger:     #f53d3d,
+  primary:    #387ef5,//blue
+  secondary:  #32db64,//green
+  danger:     #f53d3d,//red
   light:      #f4f4f4,
   dark:       #222
 );
+
+
 
 
 // App iOS Variables
 // --------------------------------------------------
 // iOS only Sass variables can go here
 
-
-
+$button-ios-background-color:  #a2a4a7;
+$button-ios-height: 5rem;
+$font-family-ios-base:	-apple-system, "Arial", sans-serif;
+$toolbar-ios-height: 74px;
+$toolbar-ios-padding: 10px;
+$cordova-ios-statusbar-padding:	0px;
 
 // App Material Design Variables
 // --------------------------------------------------
 // Material Design only Sass variables can go here
 
-
+$button-md-background-color:  #a2a4a7;
+$button-md-height: 5rem;
+$font-family-md-base:	 "Arial", sans-serif;
 
 
 // App Windows Variables
 // --------------------------------------------------
 // Windows only Sass variables can go here
 
-
+$button-wp-background-color:  #a2a4a7;
+$button-wp-height: 5rem;
+$font-family-wp-base:	 "Arial", sans-serif;
 
 
 // App Theme
