--- a/src/pages/panic-alert/panic-alert.scss
+++ b/src/pages/panic-alert/panic-alert.scss
@@ -1,19 +1,20 @@
 page-panic-alert {
 
   .panic-alert-icon-container {
-    background-color:rgba(0,0,0,0) !important;
+    // background-color:rgba(0,0,0,0) !important;
     height: 40% !important;
   }
 
   .toolbar-background {
     // background-color: rgba(203, 204, 208, 1) ;
     background: linear-gradient(180deg, #A2A4A7 0, #FFFFFF 95%);/* W3C */
-    
+
   }
 
 
   .panic-alert-icon-text {
-    background-color:white !important;
+    // background-color:white !important;
+    // background: url("../assets/img/Backgrounds/White-Background.png") !important;
     height: 60% !important;
   }
   ion-slides .swiper-pagination-bullet {
@@ -33,8 +34,31 @@ page-panic-alert {
     margin-left: auto;
     border-radius: 50%;
   }
-  svg {
+  // position: absolute;
+  // left: 0%;
+  // width: 100vw;
+  // height: 100%;
+  ion-slide {
+    margin-top: 0 !important;
+    background-image: url(../assets/img/Backgrounds/White-Background.png);
+    background-size: 100%;
+    background-repeat: no-repeat;
     height: 100%;
-    width: 32px;
+
   }
+  // .scroll-content {
+  //   margin-top: 0 !important;
+  //   background-image: url(../assets/img/Backgrounds/White-Background.png);
+  //   background-size: 100%;
+  //   background-repeat: no-repeat;
+  //   height: 100%;
+  // }
+}
+.header_logo {
+  width: 30px !important;
+  height: 30px !important;
+}
+.panic_alert_buttons {
+  width: 55vw !important;
+  height: 29vh !important;
 }
